# storage/api-docs/api-docs.json
@@ -45,6 +45,59 @@
                 }
             }
         },
+        "/api/critic": {
+            "post": {
+                "tags": [
+                    "Critic"
+                ],
+                "summary": "Add a new critic",
+                "operationId": "App\\Http\\Controllers\\CriticController::store",
+                "parameters": [
+                    {
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "film_id",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "score",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "comment",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/films/{id}/critics": {
             "get": {
                 "tags": [
@@ -83,16 +136,81 @@
                     "Films"
                 ],
                 "summary": "Get list of films",
-                "description": "Returns list of films",
-                "operationId": "getProjectsList",
+                "operationId": "App\\Http\\Controllers\\FilmController::index",
                 "responses": {
                     "200": {
-                        "description": "successful operation"
+                        "description": "OK"
                     },
                     "400": {
                         "description": "Bad request"
                     }
                 }
+            },
+            "post": {
+                "tags": [
+                    "Films"
+                ],
+                "summary": "Add a new film",
+                "operationId": "App\\Http\\Controllers\\FilmController::store",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "title": {
+                                        "type": "string"
+                                    },
+                                    "release_year": {
+                                        "type": "string"
+                                    },
+                                    "length": {
+                                        "type": "integer"
+                                    },
+                                    "description": {
+                                        "type": "string"
+                                    },
+                                    "rating": {
+                                        "type": "string"
+                                    },
+                                    "language_id": {
+                                        "type": "integer"
+                                    },
+                                    "special_features": {
+                                        "type": "string"
+                                    },
+                                    "image": {
+                                        "type": "string"
+                                    },
+                                    "created_at": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "title": "title",
+                                    "release_year": "2000",
+                                    "length": "100",
+                                    "description": "description",
+                                    "rating": "G",
+                                    "language_id": 0,
+                                    "special_features": "features",
+                                    "image": "image",
+                                    "created_at": "2000-01-01"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/films/{id}": {
@@ -125,25 +243,253 @@
                         "description": "Resource Not Found"
                     }
                 }
+            },
+            "put": {
+                "tags": [
+                    "Films"
+                ],
+                "summary": "Update a specific film",
+                "operationId": "App\\Http\\Controllers\\FilmController::update",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "title": {
+                                        "type": "string"
+                                    },
+                                    "release_year": {
+                                        "type": "string"
+                                    },
+                                    "length": {
+                                        "type": "integer"
+                                    },
+                                    "description": {
+                                        "type": "string"
+                                    },
+                                    "rating": {
+                                        "type": "string"
+                                    },
+                                    "language_id": {
+                                        "type": "integer"
+                                    },
+                                    "special_features": {
+                                        "type": "string"
+                                    },
+                                    "image": {
+                                        "type": "string"
+                                    },
+                                    "created_at": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "title": "title",
+                                    "release_year": "2000",
+                                    "length": "100",
+                                    "description": "description",
+                                    "rating": "G",
+                                    "language_id": 0,
+                                    "special_features": "features",
+                                    "image": "image",
+                                    "created_at": "2000-01-01"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Films"
+                ],
+                "summary": "Update a specific film",
+                "operationId": "App\\Http\\Controllers\\FilmController::destroy",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully Deleted Film"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/api/users": {
             "post": {
                 "tags": [
-                    "user"
+                    "User"
                 ],
                 "summary": "Add a new user",
-                "description": "",
-                "operationId": "storeUser",
+                "operationId": "App\\Http\\Controllers\\UserController::store",
                 "requestBody": {
-                    "description": "User object that needs to be added",
-                    "required": true
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "login": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "first_name": {
+                                        "type": "string"
+                                    },
+                                    "last_name": {
+                                        "type": "string"
+                                    },
+                                    "role_id": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "login": "username",
+                                    "password": "password",
+                                    "email": "your@email.com",
+                                    "first_name": "name",
+                                    "last_name": "name",
+                                    "role_id": 0
+                                }
+                            }
+                        }
+                    }
                 },
                 "responses": {
                     "405": {
                         "description": "Invalid input"
                     }
                 }
+            }
+        },
+        "/api/user": {
+            "put": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Update a user",
+                "operationId": "App\\Http\\Controllers\\UserController::update",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "login": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "first_name": {
+                                        "type": "string"
+                                    },
+                                    "last_name": {
+                                        "type": "string"
+                                    },
+                                    "role_id": {
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "login": "username",
+                                    "password": "password",
+                                    "email": "your@email.com",
+                                    "first_name": "name",
+                                    "last_name": "name",
+                                    "role_id": 0
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "405": {
+                        "description": "Invalid input"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Show the informations of the connected user.",
+                "operationId": "App\\Http\\Controllers\\UserController::show",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "scheme": "bearer"
             }
         }
     },
